--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
   <string name="poisearch_hint">Kind of place to add to your route</string>
   <string name="no_search_results">No search results for \'%1$s\'. Please try another search term.</string>
   <string name="add_to_my_route">Add to my route</string>
+  <string name="login_failure">Unable to sign in with provided credentials.</string>
+  <string name="sign_out">Sign Out</string>
 </resources>
