--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
   <string name="app_name">Grassroots Easy Steps</string>
-  <string name="title_home">Home</string>
+  <string name="title">GES</string>
   <string name="title_dashboard">Dashboard</string>
   <string name="title_notifications">Notifications</string>
   <string name="title_activity_main">Grassroots Easy Steps</string>
@@ -13,4 +13,6 @@
   <string name="add_to_my_route">Add to my route</string>
   <string name="login_failure">Unable to sign in with provided credentials.</string>
   <string name="sign_out">Sign Out</string>
+  <string name="new_search">New Search</string>
+  <string name="previous_searches">Previus Searches</string>
 </resources>
